--- a/css/responsive.css
+++ b/css/responsive.css
@@ -19,6 +19,7 @@
     header {
         flex-direction: row;
         align-items: center;
+        justify-content: space-between;
     }
 
     header.fixed {
