resize font for small screens

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -92,6 +92,10 @@
     height: auto;
     }
 
+    p , li{
+        font-size: 14px;
+    }
+
     .slider .slides {
         flex-direction: column;
     }
