--- a/css/responsive.css
+++ b/css/responsive.css
@@ -7,17 +7,57 @@
     nav ul {
         flex-direction: column;
         align-items: center;
-        display: none;
         width: 100%;
+        max-height: 0;
+        overflow: hidden;
+        opacity: 0;
+        transition: max-height 0.5s ease-out, opacity 0.5s ease-out;
     }
 
     nav ul.active {
-        display: flex;
+        max-height: 1000px;
+        opacity: 1;
+        transition: max-height 0.5s ease-in, opacity 0.5s ease-in;
+    }
+
+    nav ul li {
+        width: 100%; /* Ensures each menu item takes up the full width */
+    }
+
+    nav ul li a {
+        display: block;
+        padding: 10px 20px; /* Adjust the padding as needed */
+        white-space: nowrap; /* Prevent text from breaking into multiple lines */
+        text-align: center; /* Center align the text */
     }
 
     .menu-icon {
         display: flex;
-        margin-left: 20px; /* Add some space between logo and menu icon */
+        flex-direction: column;
+        justify-content: space-around;
+        width: 30px;
+        height: 30px;
+        cursor: pointer;
+        transition: transform 0.5s ease-in-out;
+    }
+
+    .menu-icon .bar {
+        width: 100%;
+        height: 4px;
+        background-color: #333;
+        transition: all 0.5s ease-in-out;
+    }
+
+    .menu-icon.open .bar:nth-child(1) {
+        transform: rotate(45deg) translate(5px, 5px);
+    }
+
+    .menu-icon.open .bar:nth-child(2) {
+        opacity: 0;
+    }
+
+    .menu-icon.open .bar:nth-child(3) {
+        transform: rotate(-45deg) translate(6px, -6px);
     }
 
     header {
@@ -52,7 +92,7 @@
         margin-bottom: 20px;
     }
 
-        .slider {
+    .slider {
         padding-top: 75%; /* 4:3 Aspect Ratio for smaller screens */
     }
 
@@ -87,12 +127,12 @@
         width: 150px;
     }
 
-    .research-item img{
-    width: 200px;
-    height: auto;
+    .research-item img {
+        width: 200px;
+        height: auto;
     }
 
-    p , li{
+    p, li {
         font-size: 14px;
     }
 
@@ -103,7 +143,8 @@
     .slider .slide {
         margin-bottom: 20px;
     }
-        .slider {
+
+    .slider {
         padding-top: 100%; /* 1:1 Aspect Ratio for very small screens */
     }
 
@@ -114,5 +155,3 @@
         right: 5px;
     }
 }
-
-
