--- a/css/responsive.css
+++ b/css/responsive.css
@@ -44,7 +44,7 @@
     .menu-icon .bar {
         width: 100%;
         height: 4px;
-        background-color: #333;
+        background-color: antiquewhite;
         transition: all 0.5s ease-in-out;
     }
 
