--- a/css/layout.css
+++ b/css/layout.css
@@ -143,7 +143,7 @@ footer {
     justify-content: space-between;
     padding: 20px;
     background-color: var(--footer-background-color);
-    color: var(--text-color);
+    color: white;
     margin-top: 20px;
     border-top: 4px solid var(--hover-background-color);
     box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
@@ -365,9 +365,6 @@ ul.public li a {
     transition: transform 0.3s ease; /* Smooth transition for the hover effect */
 }
 
-.research-section .image-group img:hover {
-    transform: scale(1.1); /* Enlarge the image slightly on hover */
-}
 
 .research-section .image-group figcaption {
     margin-top: 8px;
