--- a/css/layout.css
+++ b/css/layout.css
@@ -126,6 +126,10 @@ nav ul li a:hover {
     margin: 4px 0;
 }
 
+#nav-list div {
+    padding: 0 15px;
+}
+
 /* Main Container */
 .main-container {
     width: 80%;
@@ -199,7 +203,7 @@ footer p {
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
-    justify-content: center;
+    justify-content: left;
 }
 
 .student_box, .student_box_alumni {
@@ -303,7 +307,6 @@ ul.public li a {
 }
 
 /* Research Section */
-/* General research section styling */
 .research-section {
     background-color: var(--container-background-color); /* Support dark mode */
     padding: 20px;
@@ -538,4 +541,25 @@ ul.public li a {
 
 .grad-positions a,.senior-projects a{
     color: var(--link-color-grad-senior);
+}
+
+.grad-positions h1 {
+    text-decoration: underline;
+}
+
+.grad-positions h3, .senior-projects h3{
+    padding-top: 20px;
+}
+
+.grad-positions{
+    background-color: var(--container-background-color); /* Support dark mode */
+    box-shadow: var(--container-box-shadow);
+    padding: 20px;
+    border-radius: 8px;
+    margin-bottom: 20px;
+    font-size: 1.1em;
+    line-height: 1.8;
+    flex-direction: column;
+    flex-wrap: wrap;
+    gap: 20px;
 }
