--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,5 +1,21 @@
-/* Media Queries for Responsive Design */
-@media (max-width: 768px) {
+@media (max-width: 1620px) and (min-width: 941px) {
+    #nav-list li a {
+        font-size: calc(16px - (1620px - 100vw) / 300);
+        padding: calc(6px - (1620px - 100vw) / 300) calc(12px - (1620px - 100vw) / 300); /* increased padding */
+    }
+
+    #nav-list li {
+        margin: calc(6px - (1620px - 100vw) / 300 - 6px) calc(12px - (1620px - 100vw) / 300 - 6px); /* increased margin */
+    }
+    nav ul {
+        width: 100%;
+        max-height: 10;
+        opacity: 1;
+    }
+}
+
+@media (max-width: 940px) {
+
     .main-container {
         padding: 10px;
         width: 95%;
@@ -99,6 +115,13 @@
         left: 10px;
         right: 10px;
     }
+    .member_grid {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: center;
+}
+
 }
 
 @media (max-width: 480px) {
