--- a/css/components.css
+++ b/css/components.css
@@ -143,10 +143,10 @@
 /* Slider */
 .slider {
     position: relative;
-    margin-bottom: 20px;
+    margin-bottom: 0;
     overflow: hidden;
     width: 100%;
-    padding-top: 56.25%; /* 16:9 Aspect Ratio */
+    padding-top: 48%; /* 16:9 Aspect Ratio */
 }
 
 .slides {
@@ -164,7 +164,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 20px;
     display: none;
     flex-shrink: 0;
     opacity: 0;
@@ -177,23 +177,23 @@
 
 .slide img {
     width: 100%;
-    height: 100%;
     object-fit: contain;
     object-position: center;
+    border-radius: 5px;
 }
 
 .caption {
-    position: absolute;
-    bottom: 10px;
-    left: 10px;
-    right: 10px;
+    margin-top: 10px; /* Add space between slider and caption */
     color: #fff;
     background-color: rgba(0, 0, 0, 0.5);
     padding: 10px;
     font-size: 18px;
     border-radius: 4px;
     text-align: center;
+    width: 100%; /* Make the caption full width */
+    box-sizing: border-box; /* Include padding in width calculation */
 }
+
 /* Navigation Arrows */
 .slider-nav {
     position: absolute;
