--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,4 +1,4 @@
-@media (max-width: 1620px) and (min-width: 941px) {
+@media (max-width: 1620px) and (min-width: 769px) {
     #nav-list li a {
         font-size: calc(16px - (1620px - 100vw) / 300);
         padding: calc(6px - (1620px - 100vw) / 300) calc(12px - (1620px - 100vw) / 300); /* increased padding */
@@ -11,18 +11,23 @@
         width: 100%;
         max-height: 10;
         opacity: 1;
+
     }
 }
-
-@media (max-width: 940px) {
-
+@media (max-width: 768px) {
     .main-container {
         padding: 10px;
         width: 95%;
     }
+
+      .menu-icon {
+        display: flex;
+    }
+
     nav ul {
-        flex-direction: column;
-        align-items: center;
+        flex-direction: row; /* Change to row to allow wrapping */
+        flex-wrap: wrap; /* Allow items to wrap to the next line */
+        justify-content: center; /* Center the items */
         width: 100%;
         max-height: 0;
         overflow: hidden;
@@ -37,7 +42,8 @@
     }
 
     nav ul li {
-        width: 100%; /* Ensures each menu item takes up the full width */
+        width: auto; /* Let items take their natural width */
+        margin: 5px; /* Add some margin for better spacing */
     }
 
     nav ul li a {
@@ -77,13 +83,13 @@
     }
 
     header {
-        flex-direction: row;
-        align-items: center;
-        justify-content: space-between;
+        flex-direction: column;
+        align-items: center; /* Center align items in the header */
+        justify-content: center;
     }
 
     header.fixed {
-        flex-direction: row;
+        flex-direction: column;
         align-items: center;
     }
 
@@ -104,25 +110,30 @@
         flex-direction: column;
     }
 
-    .slider .slide {
-        margin-bottom: 20px;
-    }
-
-
     .caption {
         font-size: 16px;
         bottom: 10px;
         left: 10px;
         right: 10px;
     }
+
     .member_grid {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    justify-content: center;
+        display: flex;
+        flex-wrap: wrap;
+        gap: 20px;
+        justify-content: center;
+    }
+
+    .logo {
+        margin: 0 auto; /* Center the logo */
+    }
+
+    .logo img {
+        display: block; /* Ensure the image is a block element */
+        margin: 0 auto; /* Center the image */
+    }
 }
 
-}
 
 @media (max-width: 480px) {
     .main-container {
