--- a/css/layout.css
+++ b/css/layout.css
@@ -66,11 +66,11 @@ header .logo {
 }
 
 header.fixed .logo {
-    width: 60px; /* Ensure same width for both when fixed */
+    width: 75px; /* Ensure same width for both when fixed */
 }
 
 header .text {
-    width: 100px; /* Ensure same width for both */
+    width: 113px; /* Ensure same width for both */
     transition: width 0.1s ease-out;
 }
 
@@ -129,6 +129,11 @@ nav ul li a:hover {
     width: 24px; /* Adjust size as needed */
     height: 24px; /* Adjust size as needed */
     transition: opacity 0.3s;
+}
+
+header.fixed .theme-toggle img {
+    width: 16px; /* Smaller size when header is fixed */
+    height: 16px; /* Smaller size when header is fixed */
 }
 
 /* Hamburger Menu Icon */
