--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,19 +1,19 @@
 @media (max-width: 1620px) and (min-width: 769px) {
     #nav-list li a {
         font-size: calc(16px - (1620px - 100vw) / 300);
-        padding: calc(6px - (1620px - 100vw) / 300) calc(12px - (1620px - 100vw) / 300); /* increased padding */
+        padding: calc(6px - (1620px - 100vw) / 200) calc(12px - (1620px - 100vw) / 200); /* faster decreased padding */
     }
 
     #nav-list li {
-        margin: calc(6px - (1620px - 100vw) / 300 - 6px) calc(12px - (1620px - 100vw) / 300 - 6px); /* increased margin */
+        margin: calc(6px - (1620px - 100vw) / 200 - 6px) calc(12px - (1620px - 100vw) / 200 - 6px); /* faster decreased margin */
     }
     nav ul {
         width: 100%;
         max-height: 10;
         opacity: 1;
-
     }
 }
+
 @media (max-width: 768px) {
     .main-container {
         padding: 10px;
