--- a/css/layout.css
+++ b/css/layout.css
@@ -12,6 +12,7 @@
     --link-color-grad-senior:  #ff5722;
     transition: all 0.5s ease; /* Add transition for theme change */
     --hover-background-color : #ff5722;
+    --footer-icons-color: #007bff;
 }
 
 [data-theme="dark"] {
@@ -26,6 +27,7 @@
     --theme-toggle-text-color: #1e90ff;
     transition: all 0.5s ease; /* Add transition for theme change */
         --hover-background-color : #1e90ff;
+    --footer-icons-color: #fb683f;
 
 }
 
@@ -205,7 +207,7 @@ footer {
 
 .contact-info i, .address i {
     margin-right: 8px; /* Space between icon and text */
-    color: #007bff;
+    color: var(--footer-icons-color);
 }
 
 .contact-info a, .address a {
