--- a/css/responsive.css
+++ b/css/responsive.css
@@ -6,12 +6,20 @@
 
     #nav-list li {
         margin: calc(6px - (1620px - 100vw) / 200 - 6px) calc(12px - (1620px - 100vw) / 200 - 6px); /* faster decreased margin */
+
     }
     nav ul {
         width: 100%;
-        max-height: 10;
         opacity: 1;
     }
+
+    /* Remove padding from the first and last <li> elements inside the #nav-list */
+    #nav-list li:first-child a,
+    #nav-list li:last-child a {
+        padding: 0;
+    }
+
+
     .theme-toggle img {
         width: calc(24px - (1620px - 100vw) / 100); /* Slower shrinking */
         height: calc(24px - (1620px - 100vw) / 100); /* Slower shrinking */
@@ -59,7 +67,7 @@
 
     nav ul li a {
         display: block;
-        padding: 10px 20px; /* Adjust the padding as needed */
+        padding: 10px 5px; /* Adjust the padding as needed */
         white-space: nowrap; /* Prevent text from breaking into multiple lines */
         text-align: center; /* Center align the text */
     }
@@ -95,6 +103,7 @@
 
     header {
         flex-direction: column;
+        padding: 0 10px;
         align-items: center; /* Center align items in the header */
         justify-content: center;
     }
